@@ -85,7 +85,7 @@ void CheatsReset()
     gCheatsMakeAllDestructible = false;
 }
 
-void CheatsSet(CheatType cheatType, int32_t param1 /* = 0*/, int32_t param2 /* = 0*/)
+void CheatsSet(CheatType cheatType, int64_t param1 /* = 0*/, int64_t param2 /* = 0*/)
 {
     auto cheatSetAction = CheatSetAction(cheatType, param1, param2);
     GameActions::Execute(&cheatSetAction);
