@@ -18,6 +18,7 @@
 - Fix: [#20413] Crash when attempting to navigate an empty console history.
 - Fix: [#20417] Plugin/custom windows are missing the left border in the title bar.
 - Fix: [#20429] Error window tooltip not closing after 8 seconds.
+- Fix: [#20364] Adding too much money with cheats causes an overflow.
 
 0.4.5 (2023-05-08)
 ------------------------------------------------------------------------
